<resources>
    <string name="app_name">IoTVideoDemo</string>
    <string name="start_preview">start preview</string>
    <string name="stop_preview">stop preview</string>
    <string name="start_torch">start torch</string>
    <string name="stop_torch">stop torch</string>
    <string name="start_record">start record</string>
    <string name="start_web_api_activity">web api</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="qrcode">QRCode</string>
    <string name="create_qrcode">create qr code</string>
    <string name="scan_qrcode">scan qrcode</string>
    <string name="accept_the_permissions">please accept the permission in settings</string>
    <string name="player">monitor</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="design_your_view">design your view</string>
    <string name="ble">ble</string>
    <string name="enable_bluetooth">enable bluetooth</string>
    <string name="disable_bluetooth">disable bluetooth</string>
    <string name="scan_bluetooth">scan bluetooth</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_retrieve_password">Retrieve password</string>
    <string name="input_account">input account</string>
    <string name="logout">Logout</string>
    <string name="login_user_name_hint">phone or email</string>
    <string name="login_user_name_password">password</string>
    <string name="login_old_password">old password</string>
    <string name="login_new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="compare_password">password is not same</string>
    <string name="action_sign_in">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="error_invalid_name">Invalid user name</string>
    <string name="error_invalid_password">At least 4 characters</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_no_name">Input your phone or email</string>
    <string name="error_no_password">Input your password</string>
    <string name="snackbar_forgot_password">Oh oh !</string>
    <string name="snackbar_register">Oh oh !</string>
    <string name="snackbar_login">login fail</string>
    <string name="register_vcode">verification code</string>
    <string name="register_fail">register fail</string>
    <string name="register_success">register success</string>
    <string name="input_vcode">please input verification code</string>
    <string name="get_vcode">get verification code</string>
    <string name="vcode_was_sent">verification code was sent</string>
    <string name="select_wifi">select a wifi</string>
    <string name="location_permission_tip">need location permission before scanning wifi list</string>
    <string name="net_config">Net config</string>
    <string name="qrcode_net_config">QRCode</string>
    <string name="ap_net_config">AP</string>
    <string name="wired_net_config">Wired</string>
    <string name="bluetooth_net_config">Bluetooth</string>
    <string name="start_net_config">start net config</string>
    <string name="find_device">Find Device</string>
    <string name="click_to_bind">click to bind</string>
    <string name="click_to_operate">operate</string>
    <string name="unbind">unbind</string>
    <string name="device_manager">device manager</string>
    <string name="device_share">device share</string>
    <string name="you_are_not_owner">you are not the owner of the device</string>
    <string name="share_to">share to</string>
    <string name="fresh_qrcode">fresh QR Code</string>
    <string name="account_hint">input account</string>
    <string name="find_user">find user</string>
    <string name="account_share">account share</string>
    <string name="qrcode_share">QR Code share</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="device_model">device_model</string>
    <string name="local_monitor">local monitor</string>
    <string name="share_list">share list</string>
    <string name="fresh_list">fresh list</string>
    <string name="flip_to_delete">flip to delete</string>
    <string name="vas">vas</string>
    <string name="local_playback">local playback</string>
    <string name="copy_to_clipboard">copied</string>
    <string name="effective_after_restarting">Switching service effective after restarting the application</string>
    <string name="official_server">Official server</string>
    <string name="test_server">Test server</string>
    <string name="welcome"><u>Welcome</u></string>
    <string name="more"><u>more</u></string>
    <string name="cloud_storage">云存储</string>
    <string name="delete">delete</string>
    <string name="device_ota">OTA</string>
</resources>
