<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu_player"
        android:orderInCategory="1"
        android:title="@string/player"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_model"
        android:orderInCategory="1"
        android:title="@string/device_model"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_share"
        android:orderInCategory="1"
        android:title="@string/device_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_unbind"
        android:orderInCategory="2"
        android:title="@string/unbind"
        app:showAsAction="never" />
</menu>