<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".netconfig.PrepareNetConfigActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/select_wifi" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/bg_rect_blue_5">

        <Spinner
            android:id="@+id/spinner_wifi_list"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <EditText
        android:id="@+id/input_wifi_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/login_user_name_password"/>

    <Button
        android:id="@+id/start_net_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:text="@string/start_net_config" />

</LinearLayout>