<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.gwell.zxing.ViewfinderView
        android:id="@+id/viewfinderView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/custom_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/design_your_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:text="@string/design_your_view"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/preview_control"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_preview"/>

        <Button
            android:id="@+id/torch_control"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/start_torch"/>
    </LinearLayout>
</FrameLayout>
