<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/error_no_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/tv_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/tv_vcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_vcode"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="20"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/default_button"
        android:padding="16dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
