<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test.TestActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/functions"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/start_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#F44336"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/start_preview"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/start_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#E91E63"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/start_record"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/start_web_api_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#9C27B0"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/start_web_api_activity"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/test_http_via_p2p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#F32500"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="http via p2p"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>